@@ -103,6 +103,7 @@
             "format" ["cljfmt" "fix"]}
 
   :min-lein-version "2.8.1"
+  :jvm-opts ["--add-modules" "java.xml.bind"]  
 
   :source-paths ["src/clj" "src/cljs" "src/cljc" "src/workers" "script/"]
 
